# libDnsCommunication

./: CMakeLists.txt  README.md
examples/: public_dns_client.cpp
src/: client.cpp  client.hpp  debugLog.hpp  dns.cpp  dns.hpp  dnsPacker.cpp  dnsPacker.hpp  message.cpp  message.hpp  query.cpp  query.hpp  response.cpp  response.hpp  server.cpp  server.hpp
src/nlohmann/: json.hpp
tests/: CMakeLists.txt  dns_test.cpp  fonctional_test.cpp  interleaved_messages_test.cpp  main.cpp  message_test.cpp  name_error_response_test.cpp  response_decode_test.cpp  utils_test.cpp
