function(add_dns_test target)
    add_executable(${target} ${ARGN})
    set_property(TARGET ${target} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
    target_link_libraries(${target} PRIVATE Dnscommunication)
    if(NOT WIN32)
        target_link_libraries(${target} PRIVATE pthread)
    endif()
endfunction()

add_dns_test(dnsTest dns_test.cpp)
add_dns_test(utilsTest utils_test.cpp)
add_dns_test(fonctionalTest fonctional_test.cpp)
add_dns_test(responseDecodeTest response_decode_test.cpp)
add_dns_test(messageTest message_test.cpp)
add_dns_test(interleavedTest interleaved_messages_test.cpp)