function(add_dns_test target)
    add_executable(${target} ${ARGN})
    set_property(TARGET ${target} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
    target_link_libraries(${target} PRIVATE Dnscommunication)
    if(NOT WIN32)
        target_link_libraries(${target} PRIVATE pthread)
    endif()
    add_test(NAME libDns_${target} COMMAND ${target})
endfunction()

add_dns_test(dnsTest dns_test.cpp)
add_dns_test(utilsTest utils_test.cpp)
add_dns_test(responseDecodeTest response_decode_test.cpp)
add_dns_test(messageTest message_test.cpp)
add_dns_test(interleavedTest interleaved_messages_test.cpp)

# Built as a manual harness: it requires explicit server/client arguments.
add_executable(fonctionalTest fonctional_test.cpp)
set_property(TARGET fonctionalTest PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
target_link_libraries(fonctionalTest PRIVATE Dnscommunication)
if(NOT WIN32)
    target_link_libraries(fonctionalTest PRIVATE pthread)
endif()
